# compliance-agent

./: .gitignore  .pre-commit-hooks.yaml  AUDIT-0.1.9.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  action.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  pages.yml  publish.yml
assets/: comparison-table.md
docs/: ARCHITECTURE.md  ARTICLES.md  CI-CD.md  DETECTORS.md  GLOSSARY.md  MCP.md  TROUBLESHOOTING.md
examples/: EXPECTED_OUTPUT.md  README.md  SAMPLE_PDF_REPORT.md
examples/sample-chatbot/: EXPECTED_OUTPUT.md  README.md  REPORT.md  app.py  compliance.yaml
examples/sample-ci-cd/: README.md  app.py
examples/sample-ci-cd/.github/workflows/: compliance-gate.yml
examples/sample-hiring-tool/: EXPECTED_OUTPUT.md  app.py  terminal-scan.tape
examples/sample-hiring-tool-fixed/: TECHNICAL_DOC.md  app.py  risk_register.json
examples/sample-hiring-tool-fixed/compliance/: human_oversight.py  transparency_notice.py
examples/sample-hiring-tool-fixed/dataset_cards/: candidate-resumes-2026-07.json
examples/sample-hiring-tool-fixed/docs/: conformity-assessment.md  fria.md  incident-reporting.md  instructions.md  intended-purpose.md  post-market-monitoring.md  quality-management.md
examples/sample-multi-framework/: EXPECTED_OUTPUT.md  requirements.txt  research_pipeline.py
rules/: annex3.yaml  prohibited.yaml
site/: index.html
site/assets/: markdown.js  script.js  styles.css
site/docs/: ARTICLES.md  CONFIGURATION.md  DETECTORS.md  GLOSSARY.md  TROUBLESHOOTING.md  WEB-DASHBOARD.md
src/compliance_agent/: __init__.py  __main__.py  cli.py  config.py  diff.py  io_safety.py  mcp_server.py  pipeline.py  updates.py
src/compliance_agent/analyzer/: __init__.py  gaps.py
src/compliance_agent/analyzer/articles/: __init__.py  art10.py  art11.py  art12.py  art13.py  art14.py  art15.py  art16.py  art17.py  art24.py  art26.py  art27.py  art28.py  art43.py  art5.py  art50.py  art53_55.py  art6.py  art7.py  art9.py  base.py
src/compliance_agent/classifier/: __init__.py  annex3.py  risk.py
src/compliance_agent/models/: __init__.py  findings.py  recommendations.py
src/compliance_agent/recommender/: __init__.py  engine.py  rules.py
src/compliance_agent/reporter/: __init__.py  diff_report.py  html_report.py  json_report.py  markdown.py  pdf_report.py  sarif_report.py  terminal.py
src/compliance_agent/reporter/templates/: report.html
src/compliance_agent/scanner/: __init__.py  engine.py  manifests.py  parser.py
src/compliance_agent/scanner/detectors/: __init__.py  agents.py  base.py  patterns.py  providers.py
src/compliance_agent/scanner/detectors/frameworks/: __init__.py  autogen.py  base.py  crewai.py  dspy.py  haystack.py  instructor.py  langchain.py  langgraph.py  llamaindex.py  semantic_kernel.py  vercel_ai.py
src/compliance_agent/web/: __init__.py  app.py  history.py
src/compliance_agent/web/static/: dashboard.css  dashboard.html  dashboard.js
templates/: README.md
templates/art10/: data_governance.py
templates/art11/: technical_documentation.py
templates/art12/: event_logging.py
templates/art13/: instructions_for_use.py
templates/art15/: robustness_and_security.py
templates/art16/: provider_obligations_checklist.py
templates/art17/: quality_management_system.py
templates/art24/: distributor_verification.py
templates/art26/: deployer_obligations.py
templates/art27/: fria.py
templates/art43/: conformity_assessment.py
templates/art5/: prohibited_practice_escalation.py
templates/art50/: biometric_emotion_disclosure.py  content_marking.py  deepfake_disclosure.py
templates/art53/: gpai_model_documentation.py
templates/art6/: intended_purpose_classification.py
templates/art9/: risk_management.py
templates/common/: ai_disclosure_banner.html  ai_disclosure_middleware.py  compliance_config.yaml
tests/: conftest.py  test_action.py  test_article_probe.py  test_articles.py  test_classifier.py  test_cli.py  test_config.py  test_detectors.py  test_diff.py  test_framework_detectors.py  test_html_report.py  test_io_safety.py  test_manifests.py  test_markdown_reporter.py  test_mcp_server.py  test_package.py  test_parser.py  test_pdf_reporter.py  test_recommender.py  test_sarif_report.py  test_scanner.py  test_terminal_reporter.py  test_updates.py  test_web_app.py
