[project]
name = "compliance-agent"
version = "0.1.0"
description = "EU AI Act compliance scanner for AI projects"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Farda Karimov", email = "farda.karimov@elnino.tech" }
]
requires-python = ">=3.12"
keywords = ["eu-ai-act", "compliance", "ai", "scanner", "cli"]
dependencies = [
    "pathspec>=1.1.1",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "typer>=0.26.8",
]

[project.scripts]
compliance-agent = "compliance_agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/compliance_agent"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=compliance_agent --cov-report=term-missing"

[tool.coverage.run]
source = ["src/compliance_agent"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# typer.Option in argument defaults is the idiomatic Typer API
"src/compliance_agent/cli.py" = ["B008"]
