[project]
name = "compliance-agent"
dynamic = ["version"]
description = "EU AI Act compliance scanner for AI projects"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "latreon", email = "ferdakerim@gmail.com" }
]
requires-python = ">=3.12"
keywords = ["eu-ai-act", "compliance", "ai", "scanner", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "packaging>=24.0",
    "pathspec>=1.1.1",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "typer>=0.26.8",
    "weasyprint>=69.0",
]

[project.optional-dependencies]
# `compliance-agent serve` — the local web dashboard. Kept out of the core
# install so the CLI stays lean; the static HTML export works without it.
web = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]
# `compliance-agent-mcp` — exposes the pipeline as MCP tools for Claude
# Desktop, Cursor, and other MCP-compatible clients. Kept optional so a plain
# `pip install compliance-agent` never pulls in fastmcp.
mcp = [
    "fastmcp>=3.0",
]

[project.urls]
Homepage = "https://github.com/latreon/compliance-agent"
Repository = "https://github.com/latreon/compliance-agent"
Issues = "https://github.com/latreon/compliance-agent/issues"
Changelog = "https://github.com/latreon/compliance-agent/blob/main/CHANGELOG.md"

[project.scripts]
compliance-agent = "compliance_agent.cli:app"
compliance-agent-mcp = "compliance_agent.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Single source of truth for the version — read from __init__.py.
[tool.hatch.version]
path = "src/compliance_agent/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/compliance_agent"]

[tool.hatch.build.targets.wheel.force-include]
"templates" = "compliance_agent/templates"
"rules" = "compliance_agent/rules"

[tool.hatch.build.targets.sdist]
include = ["src", "templates", "rules", "tests", "README.md", "LICENSE"]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.8.0",
    # web-dashboard tests (FastAPI TestClient needs an HTTP client). Starlette
    # >=1.3 prefers httpx2 and emits a StarletteDeprecationWarning under the
    # legacy httpx path; we deliberately stay on the well-audited httpx and
    # silence that single upstream warning in [tool.pytest] filterwarnings
    # rather than pull httpx2 (and httpcore2/truststore) into the TLS chain just
    # to quiet a test-only deprecation. Revisit when Starlette drops the httpx
    # fallback (tests will then fail loudly).
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=compliance_agent --cov-report=term-missing"
filterwarnings = [
    # Starlette >=1.3 deprecates its httpx-backed TestClient in favor of httpx2.
    # We intentionally keep httpx (see the dev-deps comment); silence only this
    # one upstream deprecation, matched by message so any warning category is
    # covered. All other warnings remain visible.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]

[tool.coverage.run]
source = ["src/compliance_agent"]

[tool.mypy]
python_version = "3.12"
files = ["src"]
# The package advertises `Typing :: Typed`; keep the hints honest without
# demanding third-party stubs the ecosystem does not always ship.
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# typer.Option in argument defaults is the idiomatic Typer API
"src/compliance_agent/cli.py" = ["B008"]
# inline HTML fragments read better unwrapped
"src/compliance_agent/reporter/pdf_report.py" = ["E501"]
